rnc/src/snapshots/muffy_rnc__tests__parse_file-68.snap
---
source: rnc/src/lib.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        DefaultNamespace(
            "http://www.w3.org/2000/svg",
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: "a",
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                items: [
                    Definition(
                        Definition {
                            name: "SVG.Script.extra.class",
                            combine: None,
                            pattern: NotAllowed,
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.Script.class",
                            combine: Some(
                                Choice,
                            ),
                            pattern: Choice(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "script",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Script.extra.class",
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        Annotation {
                            name: Name {
                                prefix: Some(
                                    "a",
                                ),
                                local: "documentation",
                            },
                            attributes: [],
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.script.content",
                            combine: None,
                            pattern: Text,
                        },
                    ),
                    Definition(
                        Definition {
                            name: "script",
                            combine: None,
                            pattern: Element {
                                name_class: Name(
                                    Name {
                                        prefix: None,
                                        local: "script",
                                    },
                                ),
                                pattern: Group(
                                    [
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "attlist.script",
                                            },
                                        ),
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "SVG.script.content",
                                            },
                                        ),
                                    ],
                                ),
                            },
                        },
                    ),
                    Definition(
                        Definition {
                            name: "attlist.script",
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Core.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.XLink.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.External.attrib",
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "type",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "ContentType.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
